# optee_ftrace_viewer

./: Cargo.toml
src/: app.rs  cli.rs  ftrace.rs  main.rs  reader.rs  tree.rs  utils.rs
src/ftrace/: error.rs  file.rs  mod.rs  raw_entry.rs  symbol.rs  tree.rs
src/symbol/: error.rs  info.rs  mod.rs  region.rs  resolver.rs
src/tree/: tree.rs
src/ui/: event.rs  mod.rs  term.rs
src/ui/components/: mod.rs  trace_tree.rs
