[package]
name = "optee_ftrace_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
memchr = "2.7.5"
ratatui = "0.29.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "fs", "rt-multi-thread", "process", "io-util"] }
tui-tree-widget = "0.23.1"
