[package]
name = "optee_ftrace_viewer"
description = "A TUI application to view OP-TEE ftrace intuitively"
authors = ["Leo Chen <leo881003@gmail.com>"]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/Leo1003/optee_ftrace_viewer"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
memchr = "2.7.5"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "fs", "rt-multi-thread", "process", "io-util", "time"] }

# Ratatui related dependencies
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
tui-tree-widget = "0.23.1"
futures = "0.3.31"
